--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11066,6 +11066,31 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
+.skills__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.lang__container {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 80vh;
+  margin-right: 3vmax;
+  background: #2D2E32;
+  border-radius: 8px;
+}
+
 #experience {
   height: auto !important;
 }
