--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -274,8 +274,32 @@ body::-webkit-scrollbar-thumb {
 	}
 }
 
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+//==================================================================================
 
+
+//++++++++++++++++++++++++++++++++++++ SKILLS +++++++++++++++++++++++++++++++++++++++
+
+
+.skills__container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	//background: greenyellow;
+	flex-wrap: wrap;
+}
+
+.lang__container {
+	flex: 1;
+	height: 80vh;
+	margin-right: 3vmax;
+	background: $background--color-light;
+	//box-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
+	border-radius: 8px;
+}
+
+
+
+//===================================================================================
 
 
 //+++++++++++++++++++++++++++++++++++++EXPERIENCE ++++++++++++++++++++++++++++++++++++
