exp::before added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11221,11 +11221,12 @@ body::-webkit-scrollbar-thumb {
   width: -moz-fit-content;
   width: fit-content;
   border-left: 2px solid white;
-  padding-left: 4vw;
+  padding-left: 4vmax;
 }
 
 .exp__card {
   margin-bottom: 4vmin;
+  position: relative;
 }
 
 .exp__card::before {
@@ -11234,7 +11235,11 @@ body::-webkit-scrollbar-thumb {
   width: 1vmin;
   height: 1vmin;
   border-radius: 50%;
+  background-color: #246BFE;
   border: 1vmin solid #246BFE;
+  position: absolute;
+  top: 15%;
+  left: -4.5vmax;
 }
 
 .exp__card-header {
